--- a/Fase_2/formadmin.ui
+++ b/Fase_2/formadmin.ui
@@ -29,7 +29,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>3</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -269,6 +269,63 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="Graph">
+    <attribute name="title">
+     <string>Grafo</string>
+    </attribute>
+    <widget class="QLabel" name="label_ady">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>80</y>
+       <width>491</width>
+       <height>481</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cargando...</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_g">
+     <property name="geometry">
+      <rect>
+       <x>700</x>
+       <y>100</y>
+       <width>501</width>
+       <height>411</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cargando...</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_4">
+     <property name="geometry">
+      <rect>
+       <x>380</x>
+       <y>20</y>
+       <width>151</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Lista de Adyacencia</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_6">
+     <property name="geometry">
+      <rect>
+       <x>550</x>
+       <y>20</y>
+       <width>161</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Grafo</string>
      </property>
     </widget>
    </widget>
