--- a/Fase_2/formuser.ui
+++ b/Fase_2/formuser.ui
@@ -93,6 +93,111 @@
       <string>Mostrar Pefil</string>
      </property>
     </widget>
+    <widget class="QLineEdit" name="pass">
+     <property name="geometry">
+      <rect>
+       <x>960</x>
+       <y>320</y>
+       <width>171</width>
+       <height>28</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_9">
+     <property name="geometry">
+      <rect>
+       <x>980</x>
+       <y>280</y>
+       <width>81</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Contraseña</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_10">
+     <property name="geometry">
+      <rect>
+       <x>750</x>
+       <y>290</y>
+       <width>151</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Fecha de Nacimiento</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="nombres">
+     <property name="geometry">
+      <rect>
+       <x>740</x>
+       <y>180</y>
+       <width>171</width>
+       <height>28</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QDateEdit" name="dateEdit">
+     <property name="geometry">
+      <rect>
+       <x>770</x>
+       <y>330</y>
+       <width>110</width>
+       <height>29</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_12">
+     <property name="geometry">
+      <rect>
+       <x>960</x>
+       <y>130</y>
+       <width>63</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Apellidos</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>750</x>
+       <y>130</y>
+       <width>63</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Nombres</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="apellidos">
+     <property name="geometry">
+      <rect>
+       <x>960</x>
+       <y>180</y>
+       <width>171</width>
+       <height>28</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_5">
+     <property name="geometry">
+      <rect>
+       <x>860</x>
+       <y>440</y>
+       <width>141</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Editar Datos</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="tab_2">
     <attribute name="title">
@@ -174,9 +279,9 @@
     <widget class="QPushButton" name="mostrarsol">
      <property name="geometry">
       <rect>
-       <x>820</x>
-       <y>30</y>
-       <width>171</width>
+       <x>730</x>
+       <y>40</y>
+       <width>141</width>
        <height>29</height>
       </rect>
      </property>
@@ -213,11 +318,20 @@
     <widget class="QTextEdit" name="textsolicitudes">
      <property name="geometry">
       <rect>
-       <x>740</x>
+       <x>720</x>
        <y>120</y>
-       <width>361</width>
+       <width>451</width>
        <height>301</height>
       </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>12</pointsize>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
     <widget class="Line" name="line_2">
@@ -231,6 +345,32 @@
      </property>
      <property name="orientation">
       <enum>Qt::Orientation::Vertical</enum>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton">
+     <property name="geometry">
+      <rect>
+       <x>880</x>
+       <y>40</y>
+       <width>121</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Sugerencias</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_2">
+     <property name="geometry">
+      <rect>
+       <x>1022</x>
+       <y>40</y>
+       <width>121</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Amistades</string>
      </property>
     </widget>
    </widget>
@@ -585,6 +725,37 @@
      </property>
      <property name="text">
       <string/>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="tab_4">
+    <attribute name="title">
+     <string>Graficos</string>
+    </attribute>
+    <widget class="QPushButton" name="pushButton_3">
+     <property name="geometry">
+      <rect>
+       <x>500</x>
+       <y>10</y>
+       <width>231</width>
+       <height>29</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Grafico de Sugerencias</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_8">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>50</y>
+       <width>1251</width>
+       <height>521</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Cargando...</string>
      </property>
     </widget>
    </widget>
